Changelog
=========

1.9 - Unreleased
----------------


1.8 - 2010-01-10
----------------

* Added threading for parallel checkouts.
  [fschulze, jensens]

* Ask whether to update dirty packages during checkout.
  [fschulze]

* When you answered `yes` when asked whether to update a dirty package, then
  all further questions had been answered with `yes` as well, this is now
  fixed.
  [fschulze]

* Added `all` option when asked to update dirty packages.
  [fschulze]

* Added help for all commands to PyPI description.
  [fschulze]

* Added option to ``help`` command which outputs the help for all commands in
  reStructuredText format.
  [fschulze]

* Don't abort after user answered `no` on whether to update a package, just
  skip that package.
  [fschulze]

1.7 - 2009-11-26
----------------

* Fix a problem where a package wasn't added to the develop packages on auto
  checkout.
  [fschulze]

1.6 - 2009-11-21
----------------

* Filter the packages gathered from ``buildout:develop`` to ones declared in
  sources, otherwise things like "develop = ." break.
  [fschulze]

* Added support for Concurrent Versions System (CVS).
  [sargo]

1.5 - 2009-11-19
----------------

* Added global ``always-checkout`` and a per source ``update`` option.
  [fschulze]

* Added ``purge`` command.
  [fschulze]

* Ask user how to proceed when package is dirty.
  [fschulze]

* Refactored package matching and made the command options consistent.
  Now you can update only the packages currently in development with ``-d``
  and similar possibilities.
  [fschulze]

* Fix duplicate logging output.
  [fschulze]

* Fix parsing of buildout arguments when ``-t`` was used.
  [fschulze]

1.4 - 2009-11-16
----------------

* Allow to set a minimal revision for ``svn`` repositories. If the current
  revision is lower, then the package is updated.
  [fschulze]

1.3 - 2009-11-15
----------------

* Read the cfg used by last buildout run. This prevents unexpected behaviour,