@@ -4,6 +4,8 @@ Changelog
 1.9 - Unreleased
 ----------------
 
+* Fix `all` answer for ``update`` command.
+  [fschulze]
 
 1.8 - 2010-01-10
 ----------------
